[package]
name = "iso8601-timestamp"
version = "0.3.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"
description = "High-performance ISO8601 Timestamp formatting and parsing"
keywords = ["date", "time", "iso8601", "formatting", "parsing"]
readme = "README.md"
categories = ["date-and-time", "no-std", "parser-implementations", "value-formatting"]
license = "MIT OR Apache-2.0"
include = ["src/**/*", "LICENSE-*", "README.md"]
documentation = "https://docs.rs/iso8601-timestamp"
repository = "https://github.com/Lantern-chat/iso8601-timestamp"

[package.metadata.docs.rs]
features = ["serde", "pg", "schema", "rusqlite", "rand", "quickcheck"]

[features]
std = ["time/std"]
bson = []
diesel-pg = ["diesel", "diesel/postgres_backend"]
js = ["js-sys"]
pg = ["postgres-types", "bytes", "std", "postgres-protocol"]
rkyv_07 = ["dep:rkyv_07", "rend_04"]
rkyv_08 = ["dep:rkyv_08"]
rusqlite = ["dep:rusqlite", "std"]
rand = ["dep:rand", "time/rand"]
quickcheck = ["dep:quickcheck", "time/quickcheck"]
schema = ["schemars", "std"]
verify = []                                                  # Verify numeric input during parsing
default = ["std", "serde"]

[dependencies]
generic-array = "1.0.0"
serde = { optional = true, version = "1", default-features = false }
time = { version = "0.3", default-features = false, features = ["macros"] }
bytes = { optional = true, version = "1.1.0" }
schemars = { optional = true, version = "0.8.8" }
rusqlite = { optional = true, version = "0.32", default-features = false }
postgres-types = { optional = true, version = "0.2.2", features = ["with-time-0_3"], default-features = false }
postgres-protocol = { optional = true, version = "0.6", default-features = false }
diesel = { optional = true, version = "2", default-features = false, features = ["time", "with-deprecated"] }
rand = { optional = true, version = "0.8", default-features = false }
quickcheck = { optional = true, version = "1.0", default-features = false }
worker = { optional = true, version = "0.4" }
js-sys = { optional = true, version = "0.3" }
ramhorns = { optional = true, version = "1.0" }
fred = { optional = true, version = "9.0", default-features = false }

rkyv_07 = { package = "rkyv", optional = true, version = "0.7", default-features = false, features = ["validation"] }
rend_04 = { package = "rend", optional = true, version = "0.4", default-features = false }

rkyv_08 = { package = "rkyv", optional = true, version = "0.8", default-features = false, features = ["bytecheck"] }

[dev-dependencies]
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
criterion = { version = "0.5", features = ["html_reports"] }
chrono = "0.4"
iso8601 = "0.6"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
rkyv_07 = { package = "rkyv", version = "0.7", default-features = true }
rkyv_08 = { package = "rkyv", version = "0.8", default-features = true }

[[bench]]
name = "timestamp"
path = "benches/timestamp.rs"
harness = false

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1

[profile.bench]
opt-level = 3
lto = 'fat'
codegen-units = 1
