[package]
name = "iso8601-timestamp-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.timestamp]
package = "iso8601-timestamp"
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
